Fixing scroll-snap glitches on mobile

--- a/css/style-aos-v3.scss
+++ b/css/style-aos-v3.scss
@@ -10,42 +10,6 @@ html {
   color: white;
 }
 
-@mixin hover-supported {    
-  /* 
-   * https://developer.mozilla.org/en-US/docs/Web/CSS/@media/pointer 
-   * coarse: The primary input mechanism includes a pointing device of limited accuracy.
-   */
-  @media not all and (pointer: coarse) {
-    &:hover {
-      @content;
-    }
-  }
-}
-
-body {
-    margin:0;
-    padding:0;
-    /* font-family: 'Muli', sans-serif; */
-    font-family: 'Darker Grotesque', sans-serif;
-    font-size: 17px;
-    color: white;
-
-    /* Reserve space for header plus some extra space for sneak peeking. */
-    scroll-padding-top: 0vh;
-    overflow-x: hidden;
-    overflow-y: scroll;
-    -webkit-overflow-scrolling: touch;
-
-    @include hover-supported() {
-      scroll-snap-type: y mandatory;
-    }
-
-    /* Just to prevent flickering on iphone safari */
-    -webkit-transform:translate3d(0,0,0);
-    -webkit-backface-visibility: hidden;
-    -webkit-perspective: 1000;
-  }
-
 h2 {
   font-family: 'Muli', sans-serif;
   font-size: 2.1vmin;
